Draft for PixelColorStruct

--- a/PixelPicker/PixelPicker/PixelPicker.csproj
+++ b/PixelPicker/PixelPicker/PixelPicker.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Helpers\Behaviours.cs" />
     <Compile Include="Helpers\Extensions.cs" />
     <Compile Include="Helpers\OutOfBoundsException.cs" />
+    <Compile Include="Helpers\PixelColor.cs" />
     <Compile Include="Helpers\RelayCommand.cs" />
     <Compile Include="ViewModel\ViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
