--- a/PixelPicker/PixelPicker.Test/PixelPicker.Test.csproj
+++ b/PixelPicker/PixelPicker.Test/PixelPicker.Test.csproj
@@ -69,6 +69,9 @@
     <Content Include="default.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="testimage.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
