--- a/PixelPicker/PixelPicker/PixelPicker.csproj
+++ b/PixelPicker/PixelPicker/PixelPicker.csproj
@@ -70,6 +70,11 @@
     <Compile Include="Helpers\Extensions.cs" />
     <Compile Include="Helpers\OutOfBoundsException.cs" />
     <Compile Include="Helpers\PixelColor.cs" />
+    <Compile Include="Helpers\PixelPicker.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>PixelPicker.resx</DependentUpon>
+    </Compile>
     <Compile Include="Helpers\RelayCommand.cs" />
     <Compile Include="ViewModel\ViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
@@ -100,6 +105,10 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="Helpers\PixelPicker.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>PixelPicker.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
